# docker-controller-client

./: .flake8  .pre-commit-config.yaml  Dockerfile  README.md  app.py  autorunner.py  config.json  docker-compose.yml  docker-controller-client.py  pyproject.toml
.github/workflows/: main.yml
controllers/: __init__.py  base.py  local.py  remote.py
json_example/: config.json
runners/: __init__.py  base.py  local.py
